Fix a crash in AVDA when dereferencing a null task runner

Previously AVDAManager::StopThread() made the incorrect assumption that
the construction thread was running before using its task runner. Now
we only use the task runner when the the thread is running.

BUG=640806
TEST=run the webrtc.peerconnection benchmark

Review-Url: https://codereview.chromium.org/2277083002
Cr-Commit-Position: refs/heads/master@{#414503}

Former-commit-id: 970f2b01f45ed574d12ffe9652191c7cf2c2f5fd